hero-section: fixed image distortion by removing flex-shrink property

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,7 +115,7 @@ main {
 }
 
 #hero-section img {
-    width: 100%;
+    width:100%;
     height:300px;
 }
 
@@ -170,6 +170,7 @@ main {
 
 .card img {
     height:250px;
+    width:100%;
 }
 
 .card-text {
@@ -441,7 +442,7 @@ footer p {
 
     #hero-section figure {
         order: 2;
-        flex:3 1 320px;
+        flex:3 0 300px;
         align-self: center;
     }
 
@@ -558,7 +559,7 @@ footer p {
 
     #hero-section figure {
         order: 2;
-        align-self: flex-end;
+        align-self: center;
         max-width:388px;
     }
 
